--- a/index.html
+++ b/index.html
@@ -10,21 +10,14 @@
         <script type="text/javascript" src="js/drstrange.js"></script>
     </head>
     <body>
-        <div id="content">
-        <div id="fullscreen-bg"></div>
-        <div class="container">
-            <div class="card fullscreenable" data-fullscreen="#f1">
-                <img src="assets/img/header-1.jpg">
-                <div class="container">
-                    <p>Everyone wonders why we even oughta care about him at all...!</p>
-                </div>
+        <div class="jumbotron">
+            <div class="parallax" data-img="assets/img/header-2.jpg"></div>
+            <div class="isle">
+                <h1>Dr. Strange</h1>
+                <span id="scrolldown"></span>
             </div>
         </div>
-        </div>
-        <div id="cards">
-            <div class="fullscreen-card" id="f1">
-                <p>Test</p>
-            </div>
-        </div>
+        <div class="parallax" data-img="assets/img/header-1.jpg"></div>
+        <div class="contained"><h2>Personendaten</h2></div>
     </body>
 </html>
