--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body class="no-scroll">
         <div class="jumbotron" id="opener">
             <div class="parallax" data-img="assets/img/header-2.jpg"></div>
-            <div class="isle">
+            <div class="isle dark">
                 <h1>Dr. Strange</h1>
                 <span id="scrolldown"><i class="fas fa-angle-double-down"></i></span>
             </div>
@@ -24,26 +24,163 @@
             <div class="parallax" data-img="assets/img/header-1.jpg"></div>
             <section class="contained contained-by-padding" id="person">
                 <h2>Personendaten</h2>
-                <p class="dropcap">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
+                <div class="row equal-height">
+                    <div class="col-5">
+                        <div class="card">
+                            <div class="card-body">
+                                <h3>Steckbrief</h3>
+                                <dl class="row">
+                                    <dt class="col-4">Alter</dt>
+                                    <dd class="col-8">0 Jahre</dd>
+                                </dl>
+                                <dl class="row">
+                                    <dt class="col-4">Geburt</dt>
+                                    <dd class="col-8">01.01.2000, Nowhere D.C.</dd>
+                                </dl>
+                                <dl class="row">
+                                    <dt class="col-4">Tod</dt>
+                                    <dd class="col-8">02.01.2000</dd>
+                                </dl>
+                                <dl class="row">
+                                    <dt class="col-4">Beziehungsstatus</dt>
+                                    <dd class="col-8">Freundin</dd>
+                                </dl>
+                                <dl class="row">
+                                    <dt class="col-4">Sonstiges</dt>
+                                    <dd class="col-8">…</dd>
+                                </dl>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-7">
+                        <div class="card">
+                            <div class="card-body">
+                                <h3>Fun-Facts</h3>
+                                <p class="dropcap">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
 
-                    The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
-                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
+                                The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
 
-                    The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
-                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
-
-                    The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
-                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
-
-                    The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
             <div class="parallax" data-img="assets/img/header-3.jpg"></div>
             <section class="contained contained-by-padding" id="geschichte">
-
+                <h2>Handlung</h2>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="card">
+                            <div class="card-body">
+                                <h3>Vorgeschichte</h3>
+                                <p class="dropcap">Lorem ipsum dolor sit amet.</p><br><br>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row equal-height">
+                    <div class="col-8">
+                        <div class="card">
+                            <div class="card-body">
+                                <h3>Handlung</h3>
+                                <p class="dropcap">Lorem ipsum dolor sit amet.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <h3>Ausgangslage</h3>
+                                <ul>
+                                    <li>Some Fact</li>
+                                    <li>Some Fact</li>
+                                    <li>Some Fact</li>
+                                    <li>Some Fact</li>
+                                    <li>Some Fact</li>
+                                    <li>Some Fact</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
             <div class="parallax" data-img="assets/img/header-3.jpg"></div>
             <section class="contained contained-by-padding" id="beziehungen">
-
+                <h2>Beziehungen</h2>
+                <div class="row">
+                    <div class="card col-3">
+                        <img src="assets/img/palmer.jpeg">
+                        <div class="card-body">
+                            <h3>Christine Palmer</h3>
+                            <dl class="row">
+                                <dt class="col-4">Alter</dt>
+                                <dd class="col-8">?? Jahre</dd>
+                            </dl>
+                            <dl class="row">
+                                <dt class="col-4">Beziehung</dt>
+                                <dd class="col-8">Freundin</dd>
+                            </dl>
+                            <dl class="row">
+                                <dt class="col-4">Sonstiges</dt>
+                                <dd class="col-8">…</dd>
+                            </dl>
+                        </div>
+                    </div>
+                    <div class="card col-3">
+                        <img src="assets/img/palmer.jpeg">
+                        <div class="card-body">
+                            <h3>Christine Palmer</h3>
+                            <dl class="row">
+                                <dt class="col-4">Alter</dt>
+                                <dd class="col-8">?? Jahre</dd>
+                            </dl>
+                            <dl class="row">
+                                <dt class="col-4">Beziehung</dt>
+                                <dd class="col-8">Freundin</dd>
+                            </dl>
+                            <dl class="row">
+                                <dt class="col-4">Sonstiges</dt>
+                                <dd class="col-8">…</dd>
+                            </dl>
+                        </div>
+                    </div>
+                    <div class="card col-3">
+                        <img src="assets/img/palmer.jpeg">
+                        <div class="card-body">
+                            <h3>Christine Palmer</h3>
+                            <dl class="row">
+                                <dt class="col-4">Alter</dt>
+                                <dd class="col-8">?? Jahre</dd>
+                            </dl>
+                            <dl class="row">
+                                <dt class="col-4">Beziehung</dt>
+                                <dd class="col-8">Freundin</dd>
+                            </dl>
+                            <dl class="row">
+                                <dt class="col-4">Sonstiges</dt>
+                                <dd class="col-8">…</dd>
+                            </dl>
+                        </div>
+                    </div>
+                    <div class="card col-3">
+                        <img src="assets/img/palmer.jpeg">
+                        <div class="card-body">
+                            <h3>Christine Palmer</h3>
+                            <dl class="row">
+                                <dt class="col-4">Alter</dt>
+                                <dd class="col-8">?? Jahre</dd>
+                            </dl>
+                            <dl class="row">
+                                <dt class="col-4">Beziehung</dt>
+                                <dd class="col-8">Freundin</dd>
+                            </dl>
+                            <dl class="row">
+                                <dt class="col-4">Sonstiges</dt>
+                                <dd class="col-8">…</dd>
+                            </dl>
+                        </div>
+                    </div>
+                </div>
             </section>
         </a>
         <div id="sidebar">
