--- a/index.html
+++ b/index.html
@@ -29,26 +29,32 @@
                         <div class="card">
                             <div class="card-body">
                                 <h3>Steckbrief</h3>
-                                <dl class="row">
-                                    <dt class="col-4">Alter</dt>
-                                    <dd class="col-8">0 Jahre</dd>
-                                </dl>
-                                <dl class="row">
-                                    <dt class="col-4">Geburt</dt>
-                                    <dd class="col-8">01.01.2000, Nowhere D.C.</dd>
-                                </dl>
-                                <dl class="row">
-                                    <dt class="col-4">Tod</dt>
-                                    <dd class="col-8">02.01.2000</dd>
-                                </dl>
-                                <dl class="row">
-                                    <dt class="col-4">Beziehungsstatus</dt>
-                                    <dd class="col-8">Freundin</dd>
-                                </dl>
-                                <dl class="row">
-                                    <dt class="col-4">Sonstiges</dt>
-                                    <dd class="col-8">…</dd>
-                                </dl>
+                                <table class="info">
+                                    <tr class="row">
+                                        <td class="col-5">Name</td>
+                                        <td class="col-7">Dr. Stephen Vincent Strange</td>
+                                    </tr>
+                                    <tr class="row">
+                                        <td class="col-5">Beziehung(en)</td>
+                                        <td class="col-7">Christine Palmer</td>
+                                    </tr>
+                                    <tr class="row">
+                                        <td class="col-5">Nationalität</td>
+                                        <td class="col-7">US-amerikanisch</td>
+                                    </tr>
+                                    <tr class="row">
+                                        <td class="col-5">Spezies</td>
+                                        <td class="col-7">Mensch</td>
+                                    </tr>
+                                    <tr class="row">
+                                        <td class="col-5">Beruf</td>
+                                        <td class="col-7">Neurochirurg</td>
+                                    </tr>
+                                    <tr class="row">
+                                        <td class="col-5">Darsteller</td>
+                                        <td class="col-7">Benedict Cumberbatch</td>
+                                    </tr>
+                                </table>
                             </div>
                         </div>
                     </div>
@@ -60,6 +66,45 @@
 
                                 The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
 
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <h3>Superkräfte</h3>
+                                <ol type="I">
+                                    <li><abbr title="Um das Auge von Agamotto vor dem Diebstahl durch Ebony Maw zu beschützen, warf Merkur einen Schutzzauber auf das Relikt, der jederman verbrannte, der es zu nehmen versuchte, sodass es scheinbar unmöglich war, es zu entfernen, es sei denn, der Zauber wurde entfernt. Der Zauber bestünde selbst dann weiter, wenn der Magier selbst getötet würde.">Schutzauber</abbr></li>
+                                    <li><abbr title="Mit dem Umhang der Levitation kann Strange schweben und fliegen. Der Umhang kann die Auswirkungen des Fallens aus großen Höhen erheblich verringern, indem er seine Geschwindigkeit mühelos reduziert.">Levitation</abbr></li>
+                                    <li><abbr title="Mit Hilfe eines Sling Rings kann Strange Portale öffnen, die zu verschiedenen Orten führen und die Fähigkeit erlangen, sich sowohl durch die materielle Welt als auch in anderen Teile des Multiversums zu bewegen.">Teleportation</abbr></li>
+                                    <li><abbr title="Mit dem gleichen Sling-Ring kann Strange zwischen verschiedenen Dimensionen des Multiversums reisen, verschiedene Ebenen der Existenz durchqueren oder über verschiedene Formen der Realität reisen.">Interdimensionales Reisen</abbr></li>
+                                    <li><abbr title="Strange ist in der Lage, seine astrale Form von seinem Körper zu trennen und Zugang zur Astralen Dimension zu erlangen.">Astral Projektion</abbr></li>
+                                </ol>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <h3>Ausrüstung</h3>
+                                <ol type="I">
+                                    <li><p>Das Auge von Agamotto (Zeitstein)</p></li>
+                                    <li><p>Umhang der Levitation</p></li>
+                                    <li><p>Sling Ring</p></li>
+                                </ol>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <h3>Filme</h3>
+                                <ol type="I">
+                                    <li><p>Doctor Strange <i>(2016)</i></p></li>
+                                    <li><p>Thor: Tag der Entscheidung <i>(2017)</i></p></li>
+                                    <li><p>Avengers: Infinity War <i>(2018)</i></p></li>
+                                    <li><p>Avengers: End Game <i>(2019)</i></p></li>
+                                </ol>
                             </div>
                         </div>
                     </div>
@@ -109,7 +154,7 @@
                 <h2>Beziehungen</h2>
                 <div class="row">
                     <div class="card col-3">
-                        <img src="assets/img/palmer.jpeg">
+                        <img src="assets/img/palmer.jpeg" height="475">
                         <div class="card-body">
                             <h3>Christine Palmer</h3>
                             <dl class="row">
@@ -127,9 +172,9 @@
                         </div>
                     </div>
                     <div class="card col-3">
-                        <img src="assets/img/palmer.jpeg">
+                        <img src="assets/img/mordo.webp" height="475">
                         <div class="card-body">
-                            <h3>Christine Palmer</h3>
+                            <h3>Baron Mordo</h3>
                             <dl class="row">
                                 <dt class="col-4">Alter</dt>
                                 <dd class="col-8">?? Jahre</dd>
@@ -145,9 +190,9 @@
                         </div>
                     </div>
                     <div class="card col-3">
-                        <img src="assets/img/palmer.jpeg">
+                        <img src="assets/img/palmer.jpeg" height="475">
                         <div class="card-body">
-                            <h3>Christine Palmer</h3>
+                            <h3>Die Älteste</h3>
                             <dl class="row">
                                 <dt class="col-4">Alter</dt>
                                 <dd class="col-8">?? Jahre</dd>
@@ -163,9 +208,9 @@
                         </div>
                     </div>
                     <div class="card col-3">
-                        <img src="assets/img/palmer.jpeg">
+                        <img src="assets/img/palmer.jpeg" height="475">
                         <div class="card-body">
-                            <h3>Christine Palmer</h3>
+                            <h3>???</h3>
                             <dl class="row">
                                 <dt class="col-4">Alter</dt>
                                 <dd class="col-8">?? Jahre</dd>
@@ -182,6 +227,28 @@
                     </div>
                 </div>
             </section>
+            <div class="parallax" data-img=""></div>
+            <section class="contained contained-by-padding" id="videos">
+                <h2>Videos</h2>
+                <div class="row">
+                    <div class="card col-6" style="min-height: 400px;">
+                        <iframe class="yt" src="https://www.youtube.com/embed/s-K1lQsIYds">
+                        </iframe>
+                    </div>
+                    <div class="card col-6" style="min-height: 400px;">
+                        <iframe class="yt" src="https://www.youtube.com/embed/M9fFPLrO3RU">
+                        </iframe>
+                    </div>
+                    <div class="card col-6" style="min-height: 400px;">
+                        <iframe class="yt" src="https://www.youtube.com/embed/s-K1lQsIYds">
+                        </iframe>
+                    </div>
+                    <div class="card col-6" style="min-height: 400px;">
+                        <iframe class="yt" src="https://www.youtube.com/embed/s-K1lQsIYds">
+                        </iframe>
+                    </div>
+                </div>
+            </section>
         </a>
         <div id="sidebar">
             <h2>Dr. Strange</h2>
@@ -189,6 +256,7 @@
                 <li><a href="#person">Personendaten</a></li>
                 <li><a href="#geschichte">Handlung</a></li>
                 <li><a href="#beziehungen">Beziehungen</a></li>
+                <li><a href="#videos">Filmausschnitte</a></li>
             </ul>
         </div>
         <!--<footer>
