--- a/index.html
+++ b/index.html
@@ -61,11 +61,14 @@
                     <div class="col-7">
                         <div class="card">
                             <div class="card-body">
-                                <h3>Fun-Facts</h3>
-                                <p class="dropcap">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
-
-                                The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
-
+                                <h3>Trivia</h3>
+                                <ul>
+                                    <li>Dr. Strange wurde von Steve Ditko und Stan Lee erdacht und hatte seinen ersten Auftritt in Strange Tales #110 aus dem Jahre 1963.</li>
+                                    <li>Für den Charakter des Dr. Strange ließ sich Steve Ditko von dem Radio Serial "Chandu The Magician" inspirieren.</li>
+                                    <li>Dr. Strange wurde bereits in The Return of the First Avenger von Jasper Sitwell erwähnt. Damit ist er der erste Superheld des Marvel Cinematic Universes, der schon vor seinem ersten tatsächlichen Auftritt namentlich erwähnt wurde.</li>
+                                    <li>Auch wurde er in Spider-Man 2 als Jamerson einen neuen namen für Dr. Otto Octavius will erwähnt, Hoffman bietet den Namen Doctor Strange an, zwar findet sein Chef den Namen gut, meint aber, dass es den schon gibt.</li>
+                                    <li>In den Comics hat Dr. Strange eine Geliebte, ihr Name ist Clea.</li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -149,7 +152,7 @@
                     </div>
                 </div>
             </section>
-            <div class="parallax" data-img="assets/img/header-3.jpg"></div>
+            <div class="parallax" data-img="assets/img/header-4.jpeg"></div>
             <section class="contained contained-by-padding" id="beziehungen">
                 <h2>Beziehungen</h2>
                 <div class="row">
@@ -163,7 +166,7 @@
                             </dl>
                             <dl class="row">
                                 <dt class="col-4">Beziehung</dt>
-                                <dd class="col-8">Freundin</dd>
+                                <dd class="col-8">(Ex-)Freundin</dd>
                             </dl>
                             <dl class="row">
                                 <dt class="col-4">Sonstiges</dt>
@@ -181,7 +184,7 @@
                             </dl>
                             <dl class="row">
                                 <dt class="col-4">Beziehung</dt>
-                                <dd class="col-8">Freundin</dd>
+                                <dd class="col-8">(Ex-)Freundin</dd>
                             </dl>
                             <dl class="row">
                                 <dt class="col-4">Sonstiges</dt>
@@ -227,7 +230,7 @@
                     </div>
                 </div>
             </section>
-            <div class="parallax" data-img=""></div>
+            <div class="parallax" data-img="assets/img/header-5.jpeg"></div>
             <section class="contained contained-by-padding" id="videos">
                 <h2>Videos</h2>
                 <div class="row">
@@ -240,12 +243,24 @@
                         </iframe>
                     </div>
                     <div class="card col-6" style="min-height: 400px;">
-                        <iframe class="yt" src="https://www.youtube.com/embed/s-K1lQsIYds">
+                        <iframe class="yt" src="https://www.youtube.com/embed/KpaHWMqAM0Y">
                         </iframe>
                     </div>
                     <div class="card col-6" style="min-height: 400px;">
-                        <iframe class="yt" src="https://www.youtube.com/embed/s-K1lQsIYds">
+                        <iframe class="yt" src="https://www.youtube.com/embed/gYocQtMomFs">
                         </iframe>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="card col-12">
+                        <h3>Trivia</h3>
+                        <ul>
+                            <li>Dr. Strange wurde von Steve Ditko und Stan Lee erdacht und hatte seinen ersten Auftritt in Strange Tales #110 aus dem Jahre 1963.</li>
+                            <li>Für den Charakter des Dr. Strange ließ sich Steve Ditko von dem Radio Serial "Chandu The Magician" inspirieren.</li>
+                            <li>Dr. Strange wurde bereits in The Return of the First Avenger von Jasper Sitwell erwähnt. Damit ist er der erste Superheld des Marvel Cinematic Universes, der schon vor seinem ersten tatsächlichen Auftritt namentlich erwähnt wurde.</li>
+                            <li>Auch wurde er in Spider-Man 2 als Jamerson einen neuen namen für Dr. Otto Octavius will erwähnt, Hoffman bietet den Namen Doctor Strange an, zwar findet sein Chef den Namen gut, meint aber, dass es den schon gibt.</li>
+                            <li>In den Comics hat Dr. Strange eine Geliebte, ihr Name ist Clea.</li>
+                        </ul>
                     </div>
                 </div>
             </section>
